--- a/src/etl/sqlite_for_spark.ipynb
+++ b/src/etl/sqlite_for_spark.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "Será criado um script para passar os dados de um banco de dados sqlite para um delta table, utilizando spark\n",
     "\n",
-    "* Para iniciar o pyspark no console* :  pyspark --packages io.delta:delta-core_2.12:2.1.0 --driver-class-path /home/fovr/PROJETOS/olist-ml-models/jdbc/sqlite-jdbc-3.34.0.jar\n",
+    "* Para iniciar o pyspark no console* :  pyspark --packages io.delta:delta-core_2.12:2.1.0 --driver-class-path ~/sqlite-jdbc-3.34.0.jar\n",
+    "OU\n",
+    "Posso fazer como no script e colocar diretamente no config da SparkSession, assim posso chamar o pyspark ou jupyter notebook sem parâmetros.\n",
     "* Documentação com exemplo de utilização do jdbc drive para sqlite:*https://spark.apache.org/docs/latest/api/python/user_guide/pandas_on_spark/from_to_dbms.html*"
    ]
   },
@@ -29,13 +31,66 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/opt/spark-3.3.2-bin-hadoop3/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/fovr/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/fovr/.ivy2/jars\n",
+      "io.delta#delta-core_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-640b21d8-4a21-4968-bec3-4fc863882500;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound io.delta#delta-core_2.12;2.3.0 in central\n",
+      "\tfound io.delta#delta-storage;2.3.0 in central\n",
+      "\tfound org.antlr#antlr4-runtime;4.8 in central\n",
+      ":: resolution report :: resolve 167ms :: artifacts dl 7ms\n",
+      "\t:: modules in use:\n",
+      "\tio.delta#delta-core_2.12;2.3.0 from central in [default]\n",
+      "\tio.delta#delta-storage;2.3.0 from central in [default]\n",
+      "\torg.antlr#antlr4-runtime;4.8 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   3   |   0   |   0   |   0   ||   3   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-640b21d8-4a21-4968-bec3-4fc863882500\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 3 already retrieved (0kB/5ms)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/04/08 17:07:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
     "# Adicionado um outro caminho para o warehouse\n",
     "builder = SparkSession.builder.appName(\"Sqlite para Spark\") \\\n",
     ".config(\"spark.sql.warehouse.dir\", '/home/fovr/PROJETOS/olist-ml-models/src') \\\n",
+    ".config(\"spark.jars.packages\", \"io.delta:delta-core_2.12:2.1.0\") \\\n",
+    ".config(\"spark.jars\", \"/home/fovr/PROJETOS/olist-ml-models/jdbc/sqlite-jdbc-3.34.0.jar\")  \\\n",
     ".config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
     ".config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\") \\\n",
     ".enableHiveSupport() \n",
@@ -52,7 +107,8 @@
     {
      "data": {
       "text/markdown": [
-       "# Configurar e ler tabela sqlite\n"
+       "# Configurar e ler tabela sqlite\n",
+       "Será passado para um um dataframe cada tabela do banco de dados.\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -360,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -456,13 +512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "23/04/08 17:08:08 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "23/04/08 17:08:08 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "23/04/08 17:08:10 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
+      "23/04/08 17:08:10 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore fovr@127.0.1.1\n",
       "+---------+\n",
       "|namespace|\n",
       "+---------+\n",
@@ -479,13 +539,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "23/04/08 16:37:56 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
       "++\n",
       "||\n",
       "++\n",
@@ -525,24 +586,14 @@
    ],
    "source": [
     "# spark.sql(\"\"\" DROP DATABASE silver\"\"\").show()\n",
-    "spark.sql(\"\"\" CREATE DATABASE silver\"\"\").show()"
+    "# spark.sql(\"\"\" CREATE DATABASE silver\"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbcliente` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbgeolocalizacao` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbitempedido` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbpagamentopedido` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -581,16 +632,12 @@
       "||\n",
       "++\n",
       "++\n",
+      "\n",
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbpedido` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
-      "23/04/08 00:14:34 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbproduto` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n",
-      "23/04/08 00:14:35 WARN HiveExternalCatalog: Couldn't find corresponding Hive SerDe for data source provider DELTA. Persisting data source table `silver`.`tbvendedor` into Hive metastore in Spark SQL specific format, which is NOT compatible with Hive.\n"
      ]
     }
    ],
@@ -607,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -636,9 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/04/08 16:38:16 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 11:===========================================>            (39 + 4) / 50]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -646,14 +707,22 @@
       "+--------------------+--------------------+------+--------------------+----------------------+-----------+----------+\n",
       "|         idAvaliacao|            idPedido|vlNota|descTituloComentario|descMensagemComentario|dtAvaliacao|dtResposta|\n",
       "+--------------------+--------------------+------+--------------------+----------------------+-----------+----------+\n",
-      "|5bf1a70143253c588...|ab8c4bf0204081a45...|   5.0|                null|                  null| 2017-12-19|2017-12-19|\n",
-      "|f5eb912253261b8bb...|dccf99a9f12d7217c...|   4.0|                null|                  null| 2017-12-19|2017-12-20|\n",
-      "|608e890852fc78c38...|2d1f07a3af3df1ddc...|   3.0|                null|  Até agora não rec...| 2017-12-19|2017-12-21|\n",
-      "|875e5a568b6d64e86...|99b1cf2d12de43d08...|   5.0|                null|                  null| 2017-12-19|2017-12-19|\n",
-      "|5fbdc041e09387736...|6c6803a80161b45ad...|   5.0|                null|  Produto original,...| 2017-12-19|2017-12-20|\n",
+      "|a36150969fe6bd09e...|ef1b29b591d31d57c...|   1.0|                null|  Demora na entrega...| 2016-11-02|2016-11-03|\n",
+      "|522f795c7ef411740...|25f680bf746bec3df...|   5.0|                null|  Produto conforme ...| 2016-11-02|2016-11-07|\n",
+      "|dd065231d3137dfcb...|48c43415ea1c4af9a...|   3.0|                null|  gostei do produto...| 2016-11-02|2016-11-03|\n",
+      "|58530d17ffb83e571...|f3f12fc90564a9b03...|   3.0|                null|  Entrega muito dem...| 2016-11-02|2016-11-05|\n",
+      "|8b8ec505c06d139a8...|8729a8f7c27d03afe...|   5.0|                null|  Recebi o produto ...| 2016-11-02|2016-11-05|\n",
       "+--------------------+--------------------+------+--------------------+----------------------+-----------+----------+\n",
       "only showing top 5 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
